<resources>
    <string name="app_name">Cost analyzer</string>
    <string name="main_menu1">Home</string>
    <string name="main_menu2">Cost category</string>
    <string name="main_menu3">Cost history</string>
    <string name="main_menu4">Daily report</string>
    <string name="main_menu5">Weekly report</string>
    <string name="main_menu6">Monthly report</string>
    <string name="main_menu7">Yearly report</string>
    <string name="main_menu8">Total report</string>
    <string name="main_menu9">My Transaction</string>
    <string name="main_menu10">Backup/Restore</string>
    <string name="main_menu11">Help</string>
    <string name="main_menu12">About Team</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="test">This is just test</string>
    <string name="hello_world">Hello world!</string>
    <string name="error">error: %s</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="change">Change</string>
    <string name="reload">Reload</string>
    <string name="clean">Clean</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="ok">OK</string>
    <string name="select">Select</string>
    <string name="title_activity_category">Cost category</string>
    <string name="cost_category">Cost category</string>
    <string name="category_name">Category Name</string>
    <string name="category_type">Category Type</string>
    <string name="new_category">New category</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_category">Add New Category</string>
    <string name="add_new">add category</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="edit_category">Edit Category</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_category_are_u_sure">Are you sure to delete \"%s\" category</string>
	<string name="productive">Productive</string>
	<string name="wastage">Wastage</string>
	<string name="category_name_missing">Please write category name</string>
	<string name="save_category_success">\"%s\" category saved</string>
	<string name="save_category_failed">Failed to save category. Please try again</string>
	<string name="category_status">All category listed below. Total category: %s</string>
	<string name="not_found_category">Category not found</string>
	<string name="delete_category_success">\"%s\" category deleted</string>
	<string name="delete_category_failed">Failed to delete category. Please try again</string>
	<string name="select_category">Select Category</string>
	<string name="category_filter">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_0123456789@</string>
	<string name="title_activity_cost">Cost history</string>
	<string name="new_cost">New cost</string>
	<string name="cost_amount">Cost Amount</string>
	<string name="cost_date">Date</string>
	<string name="add_new_cost">Add New Cost</string>
    <string name="edit_cost">Edit Cost</string>
    <string name="delete_cost">Delete Cost</string>
    <string name="delete_cost_are_u_sure">Are you sure to delete \"%s\" cost</string>
    <string name="cost_category_missing">Please select cost category</string>
	<string name="cost_amount_missing">Please write cost amount</string>
	<string name="cost_amount_zero">Zero is not accepted for cost amount</string>
	<string name="save_cost_success">\"%s\" cost saved</string>
	<string name="save_cost_failed">Failed to save cost. Please try again</string>
	<string name="cost_status">All cost listed below. Total cost entry: %s</string>
	<string name="not_found_cost">Cost not found</string>
	<string name="delete_cost_success">\"%s\" cost deleted</string>
	<string name="delete_cost_failed">Failed to delete cost. Please try again</string>
	<string name="pick_date">Pick Date</string>
	<string name="cost_start_date">Start Date</string>
	<string name="cost_end_date">End Date</string>
	<string name="title_home_screen">Cost analyzer</string>
	<string name="page_top_date_text">Today %s</string>
	<string name="total_cost">Total Cost</string>
	<string name="productive_cost_status">All productive cost listed below. Total cost entry: %s</string>
	<string name="wastage_cost_status">All wastage cost listed below. Total cost entry: %s</string>
	<string name="title_daily_report">Daily report</string>
	<string name="category_wise_cost_status">Category wise cost listed below. Total entry: %s</string>
	<string name="title_weekly_report">Weekly report</string>
	<string name="weeks">Weeks</string>
	<string name="week">week</string>
	<string name="amount">amount</string>
	<string name="day">day</string>
	<string name="month">month</string>
	<string name="parcantage">percent</string>
	<string name="type">Type</string>
	<string name="number">no.</string>
	<string name="report_day">day</string>
	<string name="report_productive">productive</string>
	<string name="report_wastage">wastage</string>
	<string name="report_category">category</string>
	<string name="report_total_cost">total cost</string>
	<string name="report_percentage">percent</string>
	<string name="report_total">total</string>
	<string name="title_monthly_report">Monthly report</string>
	<string name="day_wise_cost_status">Day wise cost listed below. Total entry: %s</string>
	<string name="title_yearly_report">Yearly report</string>
	<string name="month_wise_cost_status">Month wise cost listed below. Total entry: %s</string>
	<string name="title_total_report">Total report</string>
	<string name="title_activity_transaction">My Transaction</string>
    <string name="transaction_name">Transaction with whom?</string>
    <string name="transaction_name_with">Transaction with %s</string>
    <string name="transaction_lend_amount">Lend amount</string>
    <string name="transaction_borrow_amount">Borrow amount</string>
    <string name="transaction_amount">Amount</string>
    <string name="new_transaction">New Transaction</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="delete_transaction_by_name">Delete %s transactions</string>
    <string name="delete_transaction_are_u_sure">Are you sure to delete transaction with \"%s\"</string>
    <string name="delete_transaction_confirm">Are you sure to delete this transaction</string>
    <string name="delete_all_transaction_confirm">Are you sure to delete all transactions with %s</string>
	<string name="transaction_name_missing">Please write the name of transaction person</string>
	<string name="amount_missing">Please enter transaction amount</string>
	<string name="please_try_again">Please try again</string>
	<string name="save_transaction_success">Transaction with \"%s\" saved</string>
	<string name="save_transaction_failed">Failed to save transaction. Please try again</string>
	<string name="save_transaction_failed_duplicate">Failed to save transaction. Duplicate transaction name</string>
	<string name="transaction_status">All transaction listed below. Total transaction: %s</string>
	<string name="not_found_transaction">Transaction not found</string>
	<string name="not_found_transaction_name">Name of transaction person not found</string>
	<string name="delete_transaction_success">Transaction deleted with \"%s\"</string>
	<string name="delete_transaction_success_short">Transaction deleted</string>
	<string name="delete_all_transaction_success_short">%s transactions deleted </string>
	<string name="delete_transaction_failed">Failed to delete Transaction with \"%s\"</string>
	<string name="delete_transaction_failed_short">Failed to delete Transaction</string>
	<string name="delete_all_transaction_failed_short">Failed to delete %s transactions</string>
	<string name="lend">Lend</string>
	<string name="borrow">Borrow</string>
	<string name="lend_plus">Lend (+)</string>
	<string name="borrow_minus">Borrow (-)</string>
	<string name="balance">Balance</string>
	<string name="pay_amount">Pay amount</string>
	<string name="take_amount">Take amount</string>
	<string name="transaction_summary_status">Your current transaction status</string>
	<string name="transaction_type">Transaction Type</string>
	<string name="transaction_name_filter">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_0123456789@ </string>
	<string name="transaction_amount_zero">Zero is not accepted for transaction amount</string>
	<string name="transaction_details_summary_status">Transaction with %s</string>
	<string name="title_backup_screen">Backup/Restore</string>
	<string name="backup_screen_top_text">Your overall activities</string>
	<string name="backup_screen_total_cost_enry_label">Total cost entry</string>
	<string name="backup_screen_total_category_enry_label">Total category entry</string>
	<string name="backup_screen_total_transaction_enry_label">Total transaction entry</string>
	<string name="zero">0</string>
	<string name="backup_screen_clear_button_label">Clean</string>
	<string name="backup_screen_backup_button_label">Backup</string>
	<string name="backup_screen_restore_button_label">Restore</string>
	<string name="backup_screen_clear_title">Clean all information</string>
	<string name="backup_screen_backup_title">Backup full database</string>
	<string name="backup_screen_restore_title">Restore full database</string>
	<string name="backup_screen_clear_details">Are you sure to clean all information?</string>
	<string name="backup_screen_backup_details">Are you sure to backup database?</string>
	<string name="backup_screen_restore_details">Are you sure to restore database?</string>
	<string name="system_db_not_found">Oops! Cost analyzer database not found</string>
	<string name="selected_db_not_found">Oops! Selected database not found</string>
	<string name="root">/</string>
	<string name="select_db_file">Select database</string>
	<string name="select_folder">Select folder to save database</string>
	<string name="parent_folder">Parent folder</string>
	<string name="wrong_file">Wrong file! Please select db file</string>
	<string name="backup_successful_message_title">Backup successful</string>
	<string name="backup_successful_message_details">Backup database location: %s</string>
	<string name="backup_failed">Backup failed!</string>
	<string name="restore_successful_message_title">Restore successful</string>
	<string name="help_1_title">What is Cost analyzer?</string>
	<string name="help_1_details">
	    Cost analyzer is tiny, simple application for keep tracking personal daily productive and wastage cost information.
	    Very easy to review daily, weekly, monthly, yearly 
	    cost information. Which will help to planning day to day cost activities. 
	</string>
	<string name="help_2_title">What is Cost category?</string>
	<string name="help_2_details">
	    Cost category is  cost tag which can be productive or wastage. Example: Transport, Breakfast, Lunch, Bazar etc. 
	    It is required before adding cost amount
	</string>
	<string name="help_3_title">Add Cost amount</string>
	<string name="help_3_details">
	    Add cost amount based on cost category
	</string>
	<string name="help_4_title">What is My Transaction?</string>
	<string name="help_4_details">
	    My transaction is used for keep tracking your lend or borrow amount from others. 
	    Which will help you to remember your transaction with surrounding peoples.
	</string>
	<string name="help_5_title">Cost Report</string>
	<string name="help_5_details">
	    Cost analyzer provides Daily, Weekly, Monthly, Yearly, All time Report.
	</string>
</resources>