<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vagabondlab.costanalyzer.CostActivity" >

    <TextView
        android:id="@+id/textView_search_category_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/category_name" />
    
    <Spinner 
        android:id="@+id/spinner_search_category_name"
    	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_search_category_name"
        style="@style/spinnerItemStyle"/>

    <TextView
        android:id="@+id/textView_search_category_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_search_category_name"
        android:text="@string/category_type" />

    <RadioGroup
        android:id="@+id/radioGroup_search_category_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_search_category_type"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView_search_category_type" >

        <RadioButton
            android:id="@+id/radio_search_productive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productive" />

        <RadioButton
            android:id="@+id/radio_search_wastage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wastage" />
        
    </RadioGroup>
    
    <TextView
        android:id="@+id/textView_search_cost_start_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radioGroup_search_category_type"
        android:text="@string/cost_start_date" />
    
    <TextView
        android:id="@+id/textView_selected_cost_start_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_search_cost_start_date"
        android:textColor="#000000"
        android:textSize="18sp"
        android:text="@string/cost_date" />
    
    <TextView
        android:id="@+id/textView_change_start_date"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/textView_selected_cost_start_date"
        android:layout_alignTop="@+id/textView_selected_cost_start_date"
        style="@style/changeCostButtonStyle"
        android:text="@string/change" />
    
    <TextView
        android:id="@+id/textView_search_cost_end_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_selected_cost_start_date"
        android:text="@string/cost_end_date" />
    
    <TextView
        android:id="@+id/textView_selected_cost_end_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_search_cost_end_date"
        android:textColor="#000000"
        android:textSize="18sp"
        android:text="@string/cost_date" />
    
    <TextView
        android:id="@+id/textView_change_end_date" 
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/textView_selected_cost_end_date"
        android:layout_alignTop="@+id/textView_selected_cost_end_date"
        style="@style/changeCostButtonStyle"
        android:text="@string/change" />
    
</RelativeLayout>