<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vagabondlab.costanalyzer.BackupActivity" >

    <FrameLayout
        android:id="@+id/container" 
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/relative_layout_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#dddddd"
        android:orientation="vertical" >
        
        <TextView
        	android:id="@+id/textView_summary_status"
        	android:text="@string/backup_screen_top_text"
        	style="@style/textViewSummaryStatusStyle"/>
        
        <RelativeLayout
	        android:id="@+id/relative_layout_summary"
	        style="@style/relativeLayoutSummaryStyle"
	        android:layout_height="100dip"
	        android:layout_below="@+id/textView_summary_status" >
	
	        <TextView
	            android:id="@+id/textView_total_cost_entry"
	            android:layout_height="wrap_content"
	            android:layout_width="130dip"
	            android:text="@string/zero"
	            android:gravity="center"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:layout_alignParentLeft="true" />
	
	       <TextView
	            android:id="@+id/textView_total_cost_entry_label"
	            android:layout_width="130dip"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textColor="#000000"
				android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_alignParentLeft="true"
	            android:layout_below="@+id/textView_total_cost_entry"
	            android:text="@string/backup_screen_total_cost_enry_label" />
	
	       <TextView
	            android:id="@+id/textView_total_category_entry"
	            android:layout_height="wrap_content"
	            android:layout_width="130dip"
	            android:text="@string/zero"
	            android:gravity="center"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:layout_toRightOf="@id/textView_total_cost_entry"/>
	
	        <TextView
	            android:id="@+id/textView_total_category_entry_label"
	            android:layout_width="130dip"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textColor="#000000"
				android:textAppearance="?android:attr/textAppearanceSmall"
	            android:layout_alignLeft="@+id/textView_total_category_entry"
	            android:layout_below="@+id/textView_total_category_entry"
	            android:layout_toRightOf="@id/textView_total_cost_entry"
	            android:text="@string/backup_screen_total_category_enry_label" />  
    	</RelativeLayout>
    	
        <Button
            android:id="@+id/button_clear"
            style="@style/backupButtonStyle"
            android:drawableRight="@drawable/clean"
            android:layout_below="@+id/relative_layout_summary"
            android:text="@string/backup_screen_clear_button_label" />
        
        <Button
            android:id="@+id/button_backup"
            style="@style/backupButtonStyle"
            android:drawableRight="@drawable/backup"
            android:layout_below="@+id/button_clear"
            android:text="@string/backup_screen_backup_button_label" />
        
        <Button
            android:id="@+id/button_restore"
            style="@style/backupButtonStyle"
            android:drawableRight="@drawable/restore"
            android:layout_below="@+id/button_backup"
            android:text="@string/backup_screen_restore_button_label" />
        
</RelativeLayout>
    
    
    <fragment
        android:id="@+id/navigation_drawer"
        android:name="com.vagabondlab.costanalyzer.NavigationDrawerFragment"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>