<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vagabondlab.costanalyzer.CostActivity" >

    <TextView
        android:id="@+id/textView_search_category_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/category_name" />

    <EditText
        android:id="@+id/editText_search_category_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_search_category_name"
        android:ems="10"
        android:inputType="text" >
    </EditText>
    
    <TextView
        android:id="@+id/textView_search_category_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_search_category_name"
        android:text="@string/category_type" />

    <RadioGroup
        android:id="@+id/radioGroup_search_category_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_search_category_type"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView_search_category_type" >

        <RadioButton
            android:id="@+id/radio_search_productive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productive" />

        <RadioButton
            android:id="@+id/radio_search_wastage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wastage" />
        
    </RadioGroup>
    
</RelativeLayout>